  * Fixed the common.stations.geo2ecef() conversion function (Ticket #16)
  * Fixed the correlator.fx.FXMaster() function (Ticket #18)
  * Fixed a few type conversion problems in correlator._core (core.c) introduced with the new data types
  * Fixed a frequency units conversion in tbnSpectra.py
  * Improved polarization support in the FITS IDI writer

0.4.1
  * Fixed a problem with the C readers that manifests itself on 32-bit platforms
  * Modified sphinx to be more independent about version numbers and release notes
  * Added additional PyDict checks to the _gofast module
  * Modified lsl.sim.drx to zero the frame and seconds counts to make the DRX frames ICD compliant
  * Fixed a small bug in lsl.sim.tbw/tbn/drx that caused the seconds counts to be wrong

0.4.0
  * Added new robust statistical methods
  * Added Global Sky Model models to skymap
  * Added new smoothing and fitting functions to misc.mathutil
  * Added a progress bar for use with long-running applications
  * Added in new LWA-1 dipole NEC models
  * Re-worked the plotAntenna.py script to use the pre-computed dipole response fits
  * Added support for EXCITATION keywords in misc.nec_util
  * Added new gofast readers for TBW, TBN, and DRX
  * Added better polyphase filter support
  * Fixed initialization problems the various lsl.reader Frame objects
  * Fixed the TBN ring buffer
  * Added support for simulating point sources in TBW and TBN data
  * Moved the tests directory out of lsl proper
  * Added new offset/average options to drxSpectra and tbnSpectra
  * Added new DRSU direct access module for Linux system (experimental)
  * Added documentation for the various C extensions
  * Updated the dependencies list to capture everything needed for the extensions

0.3.4.2
  * Fixed a couple of typos. in the correlator scripts
  * Added more colors to tbwSpectra.py so that all 20 inputs can be plotted
  * Fixed problems with DRX frame attributes
  * Fixed filter code problems in the DRX writer